dnl Autoconf configure script for building a tool for multiple targets.
dnl Copyright (C) 2014 Free Software Foundation, Inc.
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.

dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)dnl

AC_INIT(Makefile.in)

AC_ARG_WITH(srcdir,
AS_HELP_STRING([--with-srcdir=PATH],[Specify prefix directory for the sources to build]))

AC_SUBST(with_srcdir)

AC_OUTPUT(Makefile)
